--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,69 @@
 <resources>
     <string name="app_name">RickAndMorty</string>
+    <string name="originLabel">Origin:</string>
+    <string name="speciesLabel">Species:</string>
+
+
+
+
+    <string name="name1">Rick Sanchez</string>
+    <string name="status1">Alive</string>
+    <string name="species1">Human</string>
+    <string name="origin1">Earth</string>
+    <string name="image1">https://rickandmortyapi.com/api/character/avatar/1.jpeg</string>
+
+    <string name="name2">Morty Smith</string>
+    <string name="status2">Alive</string>
+    <string name="species2">Human</string>
+    <string name="origin2">unknown</string>
+    <string name="image2">https://rickandmortyapi.com/api/character/avatar/2.jpeg</string>
+
+    <string name="name3">Summer Smith</string>
+    <string name="status3">Alive</string>
+    <string name="species3">Human</string>
+    <string name="origin3">Earth</string>
+    <string name="image3">https://rickandmortyapi.com/api/character/avatar/3.jpeg</string>
+
+    <string name="name4">Beth Smith</string>
+    <string name="status4">Alive</string>
+    <string name="species4">Human</string>
+    <string name="origin4">Earth</string>
+    <string name="image4">https://rickandmortyapi.com/api/character/avatar/4.jpeg</string>
+
+    <string name="name5">Jerry Smith</string>
+    <string name="status5">Alive</string>
+    <string name="species5">Human</string>
+    <string name="origin5">Earth</string>
+    <string name="image5">https://rickandmortyapi.com/api/character/avatar/5.jpeg</string>
+
+    <string name="name6">Abadango Cluster Princess</string>
+    <string name="status6">Alive</string>
+    <string name="species6">Alien</string>
+    <string name="origin6">Abadango</string>
+    <string name="image6">https://rickandmortyapi.com/api/character/avatar/6.jpeg</string>
+
+    <string name="name7">Abradolf Lincler</string>
+    <string name="status7">unknown</string>
+    <string name="species7">Human</string>
+    <string name="origin7">Earth</string>
+    <string name="image7">https://rickandmortyapi.com/api/character/avatar/7.jpeg</string>
+
+    <string name="name8">Adjudicator Rick</string>
+    <string name="status8">Dead</string>
+    <string name="species8">Human</string>
+    <string name="origin8">Citadel of Ricks</string>
+    <string name="image8">https://rickandmortyapi.com/api/character/avatar/8.jpeg</string>
+
+    <string name="name9">Agency Director</string>
+    <string name="status9">Dead</string>
+    <string name="species9">Human</string>
+    <string name="origin9">Earth</string>
+    <string name="image9">https://rickandmortyapi.com/api/character/avatar/9.jpeg</string>
+
+    <string name="name10">Alan Rails</string>
+    <string name="status10">Dead</string>
+    <string name="species10">Human</string>
+    <string name="origin10">unknown</string>
+    <string name="image10">https://rickandmortyapi.com/api/character/avatar/10.jpeg</string>
+
 </resources>
